<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
<modelVersion>4.0.0</modelVersion>
<parent>
	<groupId>it.giunti.apg</groupId>
	<artifactId>apg-project</artifactId>
	<version>6.0-SNAPSHOT</version>
</parent>
<groupId>it.giunti.apg.ws</groupId>
<artifactId>apg-ws</artifactId>
<packaging>war</packaging>
<name>APG Web Services</name>

<properties>
	<!-- Charset UTF-8 -->
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<!-- Note: GWT needs at least java 1.6 -->
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
</properties>

<dependencies>
	<dependency>
		<groupId>it.giunti.apg.core</groupId>
		<artifactId>apg-core</artifactId>
		<version>6.0-SNAPSHOT</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>javax.servlet-api</artifactId>
		<version>3.1.0</version>
		<scope>provided</scope>
	</dependency>

	<!-- APACHE COMMONS -->
	<!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.codec -->
	<dependency>
	    <groupId>org.apache.directory.studio</groupId>
	    <artifactId>org.apache.commons.codec</artifactId>
	    <version>1.8</version>
	</dependency>

	<!-- WEB SERVICES -->
	<!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
	<dependency>
		<groupId>org.glassfish</groupId>
		<artifactId>javax.json</artifactId>
		<version>1.0.4</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-ri -->
	<dependency>
		<groupId>com.sun.xml.ws</groupId>
		<artifactId>jaxws-ri</artifactId>
		<version>2.3.3</version>
		<type>pom</type>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-rt -->
	<dependency>
		<groupId>com.sun.xml.ws</groupId>
		<artifactId>jaxws-rt</artifactId>
		<version>2.3.3</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/javax.xml.ws/jaxws-api -->
	<dependency>
		<groupId>javax.xml.ws</groupId>
		<artifactId>jaxws-api</artifactId>
		<version>2.3.1</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
	<dependency>
		<groupId>javax.xml.bind</groupId>
		<artifactId>jaxb-api</artifactId>
		<version>2.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
	<dependency>
		<groupId>com.sun.xml.bind</groupId>
		<artifactId>jaxb-core</artifactId>
		<version>2.3.0.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
	<dependency>
		<groupId>com.sun.xml.bind</groupId>
		<artifactId>jaxb-impl</artifactId>
		<version>2.3.3</version>
	</dependency>
	

	<!-- ALTRO -->
	<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
	<dependency>
		<groupId>ch.qos.logback</groupId>
	    <artifactId>logback-classic</artifactId>
		<version>1.2.3</version>
	</dependency>
</dependencies>

<profiles>
	<!-- PROD -->
	<profile>
		<id>prod</id>
		<build>
			<finalName>apgws</finalName>
			<plugins>
			
				<!-- ADDING GENERATED SOURCES TO COMPILE -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${basedir}/src/main/generated</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				
				<!-- COPYING and MOVING FILES -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
					    <execution>
					        <id>copy-resources</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
					        	<overwrite>true</overwrite>
					            <outputDirectory>${basedir}/target/classes</outputDirectory>
					            <resources>
					                <resource>
					                    <directory>${basedir}/src/main/resources/prod</directory>
					                    <includes>
					                        <include>*</include>
					                    </includes>
					                </resource>
					            </resources>
					        </configuration>
					    </execution>
					</executions>
				</plugin>
				
			</plugins>
		</build>
	</profile>
	<!-- /PROD -->
	
	<!-- QLT -->
	<profile>
		<id>qlt</id>
		<build>
			<finalName>apgws</finalName>
			<plugins>
				<!-- ADDING GENERATED SOURCES TO COMPILE -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${basedir}/src/main/generated</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				
				<!-- COPYING and MOVING FILES -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<executions>
					    <execution>
					        <id>copy-resources</id>
					        <phase>process-resources</phase>
					        <goals>
					            <goal>copy-resources</goal>
					        </goals>
					        <configuration>
					        	<overwrite>true</overwrite>
					            <outputDirectory>${basedir}/target/classes</outputDirectory>
					            <resources>
					                <resource>
					                    <directory>${basedir}/src/main/resources/qlt</directory>
					                    <includes>
					                        <include>*</include>
					                    </includes>
					                </resource>
					            </resources>
					        </configuration>
					    </execution>
					</executions>
				</plugin>
				
			</plugins>
		</build>
	</profile>
	<!-- /QLT -->
	
	<!-- DEV -->
	<profile>
		<id>dev</id>
		<activation>
            <activeByDefault>true</activeByDefault>
        </activation>
		<build>
			<finalName>apgws</finalName>
			<plugins>
			
				<!-- ADDING GENERATED SOURCES TO COMPILE -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${basedir}/src/main/generated</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				
				<!-- Maven Tomcat7 plugin -->
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<path>/${project.build.finalName}</path>
						<port>8080</port>
						<contextReloadable>true</contextReloadable>
						<!--systemProperties>
							<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
							<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
						</systemProperties-->
					</configuration>
				</plugin>
				
			</plugins>
		</build>
	</profile>
	<!-- /DEV -->
</profiles>
</project>
